# KitsuneOJ

./: README.md
.github/workflows/: backend-build.yml  frontend-build.yml
KitsuneOJ-server/: .gitignore  Cargo.toml
KitsuneOJ-server/migration/: Cargo.toml
KitsuneOJ-server/migration/src/: lib.rs  m20250908_122528_create_users.rs  main.rs
KitsuneOJ-server/src/: main.rs  state.rs
KitsuneOJ-server/src/api/v0/routes/: mod.rs  openapi.rs  routes.rs
KitsuneOJ-server/src/api/v0/routes/health/: routes.rs
KitsuneOJ-server/src/config/: db_config.rs
KitsuneOJ-server/src/connection/: database.rs  http.rs  mod.rs
KitsuneOJ-server/src/dto/auth/internal/: mod.rs  session.rs
KitsuneOJ-server/src/errors/: errors.rs  mod.rs  protocol.rs
KitsuneOJ-server/src/middleware/: anonymous.rs  auth.rs  cors.rs  mod.rs
KitsuneOJ-server/src/service/auth/: session.rs
KitsuneOJ-server/src/utils/: crypto.rs  extract_ip_address.rs  extract_user_agent.rs  json_validator.rs  logger.rs  mod.rs
KitsuneOJ-ui/: CLAUDE.md  llms-full.txt  package.json  pnpm-lock.yaml
KitsuneOJ-ui/src/lib/api/: api.ts
KitsuneOJ-ui/src/routes/: +layout.svelte
