[package]
name = "KitsuneOJ-server"
version = "0.1.0"
authors = [
    "Levi Lim <shiueo.csh@gmail.com>",
]
edition = "2024"
rust-version = "1.89.0"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
dotenvy = "0.15.7"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.47.1", features = ["full"]}
validator = {version = "0.20.0", features = ["derive"]}
tracing = "0.1.41"
utoipa = { version = "5.4.0",  features = ["axum_extras", "openapi_extensions", "time", "uuid", "chrono"]}
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
uuid = { version = "1.18.1", features = ["v4"] }
cookie = "0.18.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde_json = "1.0.142"
tracing-appender = "0.2.3"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
tower-cookies = "0.11.0"
sea-orm = {version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
tracing-subscriber = "0.3.20"
argon2 = "0.5.3"
tower-http = { version = "0.6.6", features = ["cors", "auth"] }
chrono = "0.4.41"
redis = { version = "0.32.5", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }
